wk_taa_taaqa/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Gain Access</fullName>
        </values>
        <values>
            <fullName>No Current Opportunity</fullName>
        </values>
        <values>
            <fullName>Not Started</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Viable</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AMS_Account_Number__c</fullName>
        <label>AMS Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(IsConverted,
ROUND( ConvertedDate  - DATEVALUE(CreatedDate), 0), ROUND((NOW() - CreatedDate),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audit_Work_Type__c</fullName>
        <label>Audit Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audits</fullName>
                </value>
                <value>
                    <fullName>Audits compilations and reviews</fullName>
                </value>
                <value>
                    <fullName>Audits including Government Audits</fullName>
                </value>
                <value>
                    <fullName>Audits but not for Government</fullName>
                </value>
                <value>
                    <fullName>Audits Compilations and Reviews including Government Audits</fullName>
                </value>
                <value>
                    <fullName>Audits Compilations and Reviews but not for Government</fullName>
                </value>
                <value>
                    <fullName>Compilations and Reviews Only</fullName>
                </value>
                <value>
                    <fullName>No Assurance Work</fullName>
                </value>
                <value>
                    <fullName>Tax Only</fullName>
                </value>
                <value>
                    <fullName>Full Service Firm</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Products_Refund_Settlement_Solution__c</fullName>
        <label>Bank Products/Refund Settlement Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Bank Products</fullName>
                </value>
                <value>
                    <fullName>1-100</fullName>
                </value>
                <value>
                    <fullName>101-300</fullName>
                </value>
                <value>
                    <fullName>301-499</fullName>
                </value>
                <value>
                    <fullName>500+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Came_from_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used in backend for lead conversion to identify which accounts were created from lead conversion.</description>
        <label>Came from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Comment_del__c</fullName>
        <label>HubSpot-Temp-Campaign-Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <inlineHelpText>If the lead is associated with multiple Campaigns, the first Campaign is shown here. All Campaigns and additional details are visible from the Campaign History related list.</inlineHelpText>
        <label>Campaign Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Business_Model__c</fullName>
        <label>Current Business Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Big 4 Acctg Firm (e.g. PWC, KPMG etc)</fullName>
                </value>
                <value>
                    <fullName>Combination</fullName>
                </value>
                <value>
                    <fullName>EY Outsource</fullName>
                </value>
                <value>
                    <fullName>Internal Tax Department</fullName>
                </value>
                <value>
                    <fullName>Internal - using third party software</fullName>
                </value>
                <value>
                    <fullName>Internal - using trust accounting system software</fullName>
                </value>
                <value>
                    <fullName>Local CPA</fullName>
                </value>
                <value>
                    <fullName>Other Outsource</fullName>
                </value>
                <value>
                    <fullName>Thomson Outsource</fullName>
                </value>
                <value>
                    <fullName>Trust US</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custodian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custodian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTN_Text__c</fullName>
        <label>DTN (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN__c</fullName>
        <formula>IF( Custodian__c , DTN_Text__c , Owner:User.DTN__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DTN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>Today() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe_Order__c</fullName>
        <label>Decision Timeframe Order</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe__c</fullName>
        <formula>&quot;1. Improved Productivity&quot; &amp; BR() &amp; &quot;2. More Functionality&quot; &amp; BR() &amp; &quot;3. Online Access&quot; &amp; BR() &amp; &quot;4. Low Cost&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Timeframe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition_Date__c</fullName>
        <label>Unqualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Domain_Type__c</fullName>
        <label>Domain Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Foreign – Canada</fullName>
                </value>
                <value>
                    <fullName>Foreign – Non-Canadian</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Named – Corp</fullName>
                </value>
                <value>
                    <fullName>Named - National</fullName>
                </value>
                <value>
                    <fullName>Named - Strategic</fullName>
                </value>
                <value>
                    <fullName>Web Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <inlineHelpText>STG CFA Forms Only</inlineHelpText>
        <label>ERP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Homegrown</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics 365</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics AX</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics GP</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics NAV</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SAP ECC</fullName>
                </value>
                <value>
                    <fullName>SAP Business One</fullName>
                </value>
                <value>
                    <fullName>SAP S/4HANA</fullName>
                </value>
                <value>
                    <fullName>Other (please indicate in comments section below)</fullName>
                </value>
                <value>
                    <fullName>Unknown/Don&apos;t Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Date_Tocuhed__c</fullName>
        <description>used to see when Lead was removed from Not Started</description>
        <label>First Date Tocuhed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Page_Seen__c</fullName>
        <description>Used for Hubspot Intergration</description>
        <label>First Page Seen</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <formula>IF(CONTAINS(First_Page_Seen__c , &quot;?gclid=&quot;) , 
RIGHT( First_Page_Seen__c ,(LEN(First_Page_Seen__c )-FIND(&quot;?gclid=&quot;, First_Page_Seen__c ))-6) 
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCLID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Practice_Management_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Practice Management Tool?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_BounceBack__c</fullName>
        <label>HubSpot BounceBack</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Improved_Productivity__c</fullName>
        <label>Improved Productivity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Owner_Change_Date__c</fullName>
        <description>Automatically gets populated/updated each time the Lead Owner is changed</description>
        <label>Last Owner Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadOwnerAssignmentTriggerOff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LeadOwnerAssignmentTriggerOff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>IF( IsConverted = TRUE, Age__c ,
IF(ISPICKVAL(Status, &quot;Unqualified&quot;),Disposition_Date__c - DATEVALUE(CreatedDate),Age__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Tax_Competitor__c</fullName>
        <description>Lead Tax Competitor</description>
        <label>Lead Tax Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ATX</fullName>
                </value>
                <value>
                    <fullName>Crosslink</fullName>
                </value>
                <value>
                    <fullName>Drake</fullName>
                </value>
                <value>
                    <fullName>GoSystem</fullName>
                </value>
                <value>
                    <fullName>Intuit Lacerte Tax</fullName>
                </value>
                <value>
                    <fullName>Intuit ProSeries</fullName>
                </value>
                <value>
                    <fullName>TaxAct</fullName>
                </value>
                <value>
                    <fullName>TaxSlayer Pro</fullName>
                </value>
                <value>
                    <fullName>Thomson Reuters UltraTax CSA</fullName>
                </value>
                <value>
                    <fullName>Turbo Tax</fullName>
                </value>
                <value>
                    <fullName>Vertex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Low_Cost__c</fullName>
        <label>Low Cost</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Firms</fullName>
                </value>
                <value>
                    <fullName>Banks and Financial Institutions</fullName>
                </value>
                <value>
                    <fullName>Consultants</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Financial and Estate Planners</fullName>
                </value>
                <value>
                    <fullName>General Corporate</fullName>
                </value>
                <value>
                    <fullName>Hospital and Payers</fullName>
                </value>
                <value>
                    <fullName>Insurance Companies</fullName>
                </value>
                <value>
                    <fullName>Legal Professionals</fullName>
                </value>
                <value>
                    <fullName>Retail Tax Preparers</fullName>
                </value>
                <value>
                    <fullName>Schools and Libraries</fullName>
                </value>
                <value>
                    <fullName>State and Local Government</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt and Membership Organizations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Sub_Segment__c</fullName>
        <label>Market Sub-Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>2-4 Total Employees</fullName>
                </value>
                <value>
                    <fullName>5-9 Total Employees</fullName>
                </value>
                <value>
                    <fullName>10-19 Total Employees</fullName>
                </value>
                <value>
                    <fullName>20-49 Total Employees</fullName>
                </value>
                <value>
                    <fullName>50-99 Total Employees</fullName>
                </value>
                <value>
                    <fullName>100+ Total Employees</fullName>
                </value>
                <value>
                    <fullName>Top 100 Firms</fullName>
                </value>
                <value>
                    <fullName>Global Enterprise</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Dept of Agriculture</fullName>
                </value>
                <value>
                    <fullName>Dept of Commerce</fullName>
                </value>
                <value>
                    <fullName>Dept of Defense</fullName>
                </value>
                <value>
                    <fullName>Dept of Energy</fullName>
                </value>
                <value>
                    <fullName>Dept of Health and Human Services</fullName>
                </value>
                <value>
                    <fullName>Dept of Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Dept of Housing and Urban Development</fullName>
                </value>
                <value>
                    <fullName>Dept of Interior</fullName>
                </value>
                <value>
                    <fullName>Dept of Justice</fullName>
                </value>
                <value>
                    <fullName>Dept of Labor</fullName>
                </value>
                <value>
                    <fullName>Dept of State</fullName>
                </value>
                <value>
                    <fullName>Dept of Treasury (not IRS)</fullName>
                </value>
                <value>
                    <fullName>Dept of Vet Affairs</fullName>
                </value>
                <value>
                    <fullName>EEOC</fullName>
                </value>
                <value>
                    <fullName>Exec Branch (White House)</fullName>
                </value>
                <value>
                    <fullName>FCC</fullName>
                </value>
                <value>
                    <fullName>FDIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>More_Functionality__c</fullName>
        <label>More Functionality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Campaign_Date__c</fullName>
        <description>Automatically gets populated/updated each time a new MQL Campaign Member is added to the Lead</description>
        <label>Most Recent Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NA_CCC__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CCH Connections Conference</description>
        <inlineHelpText>CCH Connections Conference</inlineHelpText>
        <label>NACCC-CCH Conn Conf Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_IFT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Intelligence for Taxation (Monthly)</description>
        <inlineHelpText>Intelligence for Taxation (Monthly)</inlineHelpText>
        <label>NAIFT-Intell for Tax Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_TNH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tax News Headlines (Daily)</description>
        <inlineHelpText>Tax News Headlines (Daily)</inlineHelpText>
        <label>NATNH-Tax News Headline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Named_Account_Type__c</fullName>
        <label>Named Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Corporate National</fullName>
                </value>
                <value>
                    <fullName>Service Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <formula>IF( ISPICKVAL( Named_Account_Type__c , &quot;National&quot;) || ISPICKVAL( Named_Account_Type__c , &quot;Strategic&quot;) || ISPICKVAL( Named_Account_Type__c , &quot;Corporate National&quot;)|| ISPICKVAL( Named_Account_Type__c , &quot;Service Source&quot;),true,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Worked__c</fullName>
        <formula>First_Date_Tocuhed__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Worked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Trust_Returns__c</fullName>
        <label>Number of Trust Returns</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oil_Gas_Depletions__c</fullName>
        <label>Oil &amp; Gas Depletions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-9</fullName>
                </value>
                <value>
                    <fullName>10-49</fullName>
                </value>
                <value>
                    <fullName>50+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Access__c</fullName>
        <label>Online Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Source_Drill_Down_1__c</fullName>
        <label>Original Source Drill-Down 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Drill_Down_2__c</fullName>
        <description>Used for Hubspot Intergration</description>
        <label>Original Source Drill-Down 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source__c</fullName>
        <label>Original Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Traffic</fullName>
                </value>
                <value>
                    <fullName>Email Marketing</fullName>
                </value>
                <value>
                    <fullName>Offline Sources</fullName>
                </value>
                <value>
                    <fullName>Organic Search</fullName>
                </value>
                <value>
                    <fullName>Other Campaigns</fullName>
                </value>
                <value>
                    <fullName>Paid Search</fullName>
                </value>
                <value>
                    <fullName>Paid Social</fullName>
                </value>
                <value>
                    <fullName>Referrals</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Division__c</fullName>
        <formula>Text( Owner:User.Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_High_Level_Division__c</fullName>
        <formula>TEXT(Owner:User.High_Level_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner High Level Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Zip_Code__c</fullName>
        <label>Previous Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>CCH AutoFlow</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Document</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Portal</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Practice</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Tax</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Workstream</fullName>
                </value>
                <value>
                    <fullName>CCH eSign/Bundles</fullName>
                </value>
                <value>
                    <fullName>CCH Knowledge Tools</fullName>
                </value>
                <value>
                    <fullName>CCH Sales Tax Office v4.0 Upgrade</fullName>
                </value>
                <value>
                    <fullName>CCH Site Builder</fullName>
                </value>
                <value>
                    <fullName>Pfx ActiveData</fullName>
                </value>
                <value>
                    <fullName>Pfx Document</fullName>
                </value>
                <value>
                    <fullName>Pfx Engagement/Workpaper Manager</fullName>
                </value>
                <value>
                    <fullName>Pfx Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Pfx Knowledge Coach</fullName>
                </value>
                <value>
                    <fullName>Pfx Outsource</fullName>
                </value>
                <value>
                    <fullName>Pfx PDFlyer</fullName>
                </value>
                <value>
                    <fullName>Pfx Practice Management</fullName>
                </value>
                <value>
                    <fullName>Pfx Scan</fullName>
                </value>
                <value>
                    <fullName>Pfx Tax</fullName>
                </value>
                <value>
                    <fullName>Professional and Client Services</fullName>
                </value>
                <value>
                    <fullName>Rates &amp; Taxability Databases</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Learning</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Use Tax Calculation (On-Premise)</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Use Tax Calculation (SaaS)</fullName>
                </value>
                <value>
                    <fullName>Sales Tax Compliance (Returns)</fullName>
                </value>
                <value>
                    <fullName>Training &amp; Consulting/Professional Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RL_AAR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Accounting  Audit Research</description>
        <inlineHelpText>RL Accounting  Audit Research</inlineHelpText>
        <label>RLAAR-Accounting  Audit Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_FEPR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Financial Estate Planning Research</description>
        <inlineHelpText>Financial Estate Planning Research</inlineHelpText>
        <label>RLFEP-Financial Estate Planning Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_FTR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Federal Tax Research</description>
        <inlineHelpText>RL Federal Tax Research</inlineHelpText>
        <label>RLFT- Federal Tax Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_ITR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL International Tax Research</description>
        <inlineHelpText>RL International Tax Research</inlineHelpText>
        <label>RLIT- International Tax Research</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>